<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllreadyCollected"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/pickup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location">


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:tabSelectedTextColor="@color/colorLight"
        app:tabTextColor="@color/colorDark"
        android:background="@color/colorPrimary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_to_collect_option" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_collected_option">

        </com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/pickup_code_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_up_code_default"/>

                <TextView
                    android:id="@+id/pickup_codes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup_codes"/>
                <TextView
                    android:id="@+id/timestamp_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timestamp_default"/>
                <TextView
                    android:id="@+id/has_been_collected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/has_been_collected"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>